--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ h1 {
 }
 
 .day:hover {
-    -webkit-filter: brightness(70%);
+	 background-color: #f5f5f5;
     -webkit-transition: all 1s ease;
     -moz-transition: all 1s ease;
     -o-transition: all 1s ease;
